--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
 * {
     font-size: 2rem;
 }
+
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 500px;
+    aspect-ratio: 1;
+    border: 2px solid black;
+}
+
+.position {
+    box-sizing: border-box;
+    height: calc(500px/3);
+    aspect-ratio: 1;
+    border: 1px solid black;
+}
