--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 }
 
 body {
+    font-family: sans-serif;
+    font-weight: bold;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -18,6 +20,9 @@ body {
 }
 
 .position {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
     height: calc(500px/3);
     aspect-ratio: 1;
