--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,16 @@
+@font-face {
+    font-family: 'fun-groovy';
+    src: url(/fonts/fun-groovy-font/FunGroovy-1GB12.ttf);
+}
+
+@font-face {
+    font-family: 'cheese';
+    src: url(/fonts/mouldy-cheese-font/MouldyCheeseRegular-WyMWG.ttf);
+}
+
 * {
-    font-size: 2rem;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -7,8 +18,69 @@ body {
     font-weight: bold;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+
+.opponent-div {
+    margin-top: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 600px;
+    height: 150px;
+}
+
+/* .opponent-div {
+    display: none;
+} */
+
+h2 {
+    font-family: 'cheese';
+    letter-spacing: 5px;
+    font-size: 50px;
+}
+
+.opponent-div > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.opponent-div > div > img {
+    height: 100px;
+    width:100px;
+    margin-bottom: 10px;
+    transition: transform 0.2s ease;
+}
+
+.opponent-div > div > img:hover {
+    height: 150px;
+    width: 150px;
+    animation: vibrate 0.3s ease infinite;
+}
+
+@keyframes vibrate {
+    0% { transform: translate(0, 0); }
+    20% { transform: translate(-2px, -2px); }
+    40% { transform: translate(2px, 2px); }
+    60% { transform: translate(-2px, -2px); }
+    80% { transform: translate(2px, 2px); }
+    100% { transform: translate(0, 0); }
+}
+
+
+.title {
+    font-family: 'fun-groovy';
+    font-size: 7rem;
+}
+
+.start-btn {
+    font-family: 'cheese';
+    font-size: 30px;
+    padding: 10px;
 }
 
 .container {
