--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,13 @@ body {
     align-items: center;
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .title {
     font-family: 'fun-groovy';
     font-size: 7rem;
@@ -62,7 +69,7 @@ body {
     /* border: 1px solid black; */
 }
 
-.hide {
+.hidden {
     display: none;
 }
 
@@ -159,7 +166,7 @@ input::placeholder {
 .container {
     display: flex;
     flex-wrap: wrap;
-    height: 500px;
+    height: 400px;
     aspect-ratio: 1;
     border: 2px solid black;
 }
@@ -169,7 +176,7 @@ input::placeholder {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    height: calc(500px/3);
+    height: calc(400px/3);
     aspect-ratio: 1;
     border: 1px solid black;
 }
