--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,44 @@
     padding: 0;
     margin: 0;
 }
+/* modal design */
+::backdrop {
+    background-color: black;
+    opacity: 0.7;
+}
+
+dialog {
+    padding: 30px;
+    margin: auto;
+}
+
+.buttons {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 5px;
+}
+
+.buttons > button {
+    font-weight: bold;
+    font-size: 2em;
+    padding: 10px;
+    display: flex;
+    border: none;
+    gap: 10px;
+}
+      
+.exit,.play-again {
+    color: white;
+    font-size: 20px;
+}
+
+.exit {
+    background-color: rgb(235, 51, 51);
+}
+      
+.play-again {
+    background-color: rgb(17, 218, 17);
+}
 
 body {
     font-family: sans-serif;
@@ -126,12 +164,11 @@ form label {
     font-size: 2em;
 }
 
-.play-btn {
+#play-btn {
     margin-top: 20px;
     font-size: 30px;
     font-weight: 900;
     padding: 10px;
-    border-radius: 25%;
 }
 
 input[type='text'] {
